--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
 				<li id="mainnav_item">Blog</li>
 				<li id="mainnav_item">WOTD</li>
 				<li id="mainnav_item">Fitness Helpers</li>
+					<ul class="hmenu">
+  					<%= render 'devise/menu/registration_items' %>
+  					<%= render 'devise/menu/login_items' %>
+					</ul>
 			</ul>
 		</div>
 
