--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,2 @@
-<h1>Listing users</h1>
-
-<table>
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>City</th>
-    <th>State</th>
-    <th>Country</th>
-    <th>Username</th>
-    <th>Birthday</th>
-    <th>Birthmonth</th>
-    <th>Birthyear</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.firstname %></td>
-    <td><%= user.lastname %></td>
-    <td><%= user.city %></td>
-    <td><%= user.state %></td>
-    <td><%= user.country %></td>
-    <td><%= user.username %></td>
-    <td><%= user.birthday %></td>
-    <td><%= user.birthmonth %></td>
-    <td><%= user.birthyear %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
+<h1>User Area</h1>
+    <%= render "workout_page" %>
