Got the personal info form working, but the root lands on an error

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,10 +11,22 @@
  *= require_self
  *= require_tree .
  */
- #header ul {
- 	list-style-type:none;
- 
+ #header {
+
+ 	background-color: lightblue;
+
+ 	ul {
+ 		.main_nav {
+ 			list-style-type:none;
+ 			font-weight: bold;
+ 		}
+
+ 		.hmenu {
+		list-style-type:none;
+		text-align: right;
+	}
  	li {
  		display: inline;
- 	}
+ 		}
+	}
 }
