--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<div id="header">
-			<ul id="main_nav">
+			<ul class="main_nav">
 				<li id="mainnav_item">Home</li>
 				<li id="mainnav_item">Blog</li>
 				<li id="mainnav_item">WOTD</li>
