--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,50 +1,7 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Firstname:</b>
-  <%= @user.firstname %>
-</p>
-
-<p>
-  <b>Lastname:</b>
-  <%= @user.lastname %>
-</p>
-
-<p>
-  <b>City:</b>
-  <%= @user.city %>
-</p>
-
-<p>
-  <b>State:</b>
-  <%= @user.state %>
-</p>
-
-<p>
-  <b>Country:</b>
-  <%= @user.country %>
-</p>
-
-<p>
-  <b>Username:</b>
-  <%= @user.username %>
-</p>
-
-<p>
-  <b>Birthday:</b>
-  <%= @user.birthday %>
-</p>
-
-<p>
-  <b>Birthmonth:</b>
-  <%= @user.birthmonth %>
-</p>
-
-<p>
-  <b>Birthyear:</b>
-  <%= @user.birthyear %>
-</p>
-
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<h1>Your Information</h1>
+<% if user_signed_in? && current_user.personal_info %>
+<%= render "workout_page" %>
+<%= render "info" %>
+<% else %>
+<%= link_to "Get started now!", new_user_personal_info_path(current_user.id) %>
+<% end %>
