--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 <% if user_signed_in? && current_user.personal_info %>
 <%= render "workout_page" %>
 <%= render "info" %>
+<% elsif user_signed_in? %>
+<%= render :partial => "/personal_info/form", :locals => {personal_info: @personal_info } %>
 <% else %>
-<%= link_to "Get started now!", new_user_personal_info_path(current_user.id) %>
+<%= link_to "Get started now!", new_user_registration_path %>
 <% end %>
