--- a/app/views/personal_info/new.html.erb
+++ b/app/views/personal_info/new.html.erb
@@ -1,6 +1,4 @@
 <h1>New personal_info</h1>
 
-<%= form_for @personal_info, url: user_personal_info_index_path, html: { method: :post } do |f| %>
-<%= render 'form', f: f %>
-<% end %>
+<%= render 'form' %>
 <%= link_to 'Back', user_path %>
