--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <%= render "workout_page" %>
 <%= render "info" %>
 <% elsif user_signed_in? %>
-<%= render :partial => "/personal_info/form", :locals => {personal_info: @personal_info } %>
+<%= render :partial => "/personal_info/form" %>
 <% else %>
 <%= link_to "Get started now!", new_user_registration_path %>
 <% end %>
