changes to route file, user controller, user#show

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -9,5 +9,5 @@
 </div>
 <br />
 <%= link_to "Detailed Information", "#" %>
-<%= link_to "Track Your Info", edit_user_personal_info_path(current_user.id, current_user.personal_info.id) %> 
+<%= link_to "Track Your Info", edit_user_path %> 
 <!-- This line is giving an error ^^^ -->
