--- a/app/views/personal_info/_form.html.erb
+++ b/app/views/personal_info/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @personal_info, url: new_user_personal_info_path(@user), html: { method: :post } do |f| %>
+<%= form_for @personal_info, url: new_user_personal_info_path(user), html: { method: :post } do |f| %>
 
     <%= f.label :activity_level %><br>
     <%= f.number_field :activity_level %>
